--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,15 @@ h1, h2, h3, h4, h5, h6 {
         display: block;
     }
 }
+.bg-blue {
+    background-color: #3333ff;
+    background-image: linear-gradient(#3333ff, #80bfff);
+    color: #ffffff;
+}
+.bg-white {
+    background-color: #ffffff;
+    color: #3333ff;
+}
 
 /*----- Mobile -----*/
 .callout {
@@ -116,11 +125,14 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     height: 100%;
 }
-#desktop .row-full-height .col {
-    height: 800px;
-}
+#desktop-01 {
+    padding-top: 20px;
+} 
 .skill {
     margin-top: 50px;
+}
+#logos-banner {
+    padding: 20px;
 }
 .work-logos {
     width: 90%;
