--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ Sections
 
 /*----- Global -----*/
 html, body {
-    height: 100%;
     margin: 0;
 }
 h1 {
@@ -121,11 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 #desktop h2 {
     font-size: 5rem;
 }
-#desktop .row-full-height {
-    width: 100%;
-    height: 100%;
-}
-#desktop-01 {
+#intro {
     padding-top: 20px;
 } 
 .skill {
@@ -134,9 +129,30 @@ h1, h2, h3, h4, h5, h6 {
 #logos-banner {
     padding: 20px;
 }
+#logos-banner img {
+    height: 60px;
+    width: auto;
+    margin: auto;
+}
 .work-logos {
     width: 90%;
     height: auto;
     max-width: 200px;
     margin: auto;
+}
+#contact {
+    padding: 200px 0;
+}
+#footer-progress-bar {
+    visibility: hidden;
+    position: fixed;
+    bottom: 0;
+    background-image: linear-gradient( #ffffff, #e6e6e6);
+    color: #3333ff;
+    width: 100%;
+}
+#footer-progress-bar .col {
+    width: 25%;
+    font-size: 5rem;
+    padding: 20px 0;
 }
