--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,7 @@ Last Date Modified: 2021/05/19
 Sections
  - Fonts
  - Global
- - Mobile
- - Desktop
+ - Components
 ---------- */
 
 /*----- Fonts -----*/
@@ -40,20 +39,6 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     color: #fff;
 }
-#mobile {
-    display: block;
-}
-#desktop {
-    display: none;
-}
-@media screen and (min-width:768px) {
-    #mobile {
-        display: none;
-    }
-    #desktop {
-        display: block;
-    }
-}
 .bg-blue {
     background-color: #3333ff;
     background-image: linear-gradient(#3333ff, #80bfff);
@@ -64,42 +49,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #3333ff;
 }
 
-/*----- Mobile -----*/
-.callout {
-    background-color: #3333ff;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-}
-.callout {
-    padding: 10px;
-}
-.callout h2 {
-    font-size: 1rem;
-}
-#nav h2 {
-    color: #e6e6e6;
-    font-size: 1.25rem;
-}
-#nav p {
-    line-height: 0.8;
-}
-.card {
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-}
-.card-body {
-    padding: 0;
-}
-.card-title {
-    color: #ffffff;
-    background-color: #3333ff;
-    background-image: linear-gradient(#3333ff, #80bfff);
-    padding: 1rem;
-}
-.card-subtitle, .card-text, .card-dates {
-    margin: 1rem;
-}
+
 /*----- Desktop -----*/
 #desktop .container-fluid {
     padding: 0;
@@ -114,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 #desktop h2 {
     font-size: 5rem;
 }
+/*----- Intro -----*/
 #intro {
     padding-top: 20px;
 }
@@ -124,6 +75,8 @@ img.intro-img {
     max-width: 400px;
     margin: auto;
 }
+
+/*----- Skills -----*/
 .skill {
     margin-top: 50px;
 }
@@ -137,6 +90,8 @@ img.intro-img {
     max-width: 200px;
     margin: auto;
 }
+
+/*----- Experience -----*/
 #logos-banner {
     padding: 20px;
     margin-top:200px;
@@ -152,6 +107,8 @@ img.intro-img {
     max-width: 200px;
     margin: auto;
 }
+
+/*----- Contact -----*/
 #contact {
     padding: 200px 0;
 }
@@ -164,6 +121,8 @@ img.intro-img {
     margin-left: auto;
     margin-right: auto;
 }
+
+/*----- Progress Bar -----*/
 #footer-progress-bar {
     visibility: hidden;
     position: fixed;
