--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,9 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #ffffff;
     color: #3333ff;
 }
-
+.pointer {
+    cursor: pointer;
+}
 
 /*----- Desktop -----*/
 #desktop .container-fluid {
@@ -87,14 +89,24 @@ img.intro-img {
 #skills h3 {
     margin-top:200px;
 }
+#skills h4 {
+    font-size: 2rem;
+}
 .skills-img {
     display: block;
     width: 50%;
     height: auto;
     max-width: 200px;
-    margin: auto;
+    margin: 20px auto;
 }
-
+.skill-detail {
+    display: none;
+    background-image: linear-gradient(to right, #80bfff , #3333ff);
+    padding: 20px;
+}
+.skill-detail p {
+    font-size: 1.25rem;
+}
 /*----- Experience -----*/
 #logos-banner {
     padding: 20px;
